2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Change comment to point to specification.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Redirect error messages to the logging 
	  mechanism.
	* libexif/exif-log.h: EXIF_LOG_CODE_CORRUPT_DATA: New.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c
	* libexif/exif-data.c: Replace a couple of calls to malloc by 
	  calls to calloc.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Use calloc. Hint by Jan Patera
	  <patera@pictview.com>.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/pentax: Fix typo and wrong logic introduced during my
	  last changes. Thanks to Jan Patera
	  <patera@pictview.com> for keeping an eye on me.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/pentax
	* libexif/canon: Correctly return names, titles and descriptions of
	  tages. Pointed out by Angela Wrobel.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: More guards against malloc returning NULL.
	  Problem spotted by Angela Wrobel.

2004-09-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: First part of a patch to be less strict on
	  the USER_COMMENT-tag. Submitted by Angela Wrobel, slightly adapted.

2004-09-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.c: First ideas on how to support generation of
	  mandatory exif tags for a new image.

2004-09-01  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestion by Angela Wrobel (http://www.wrobelnet.de/contact.html):

	* libexif/pentax:
	* libexif/olympus: Improve user experience by removing information
	  from the output that was only intended for developers.

2004-08-31  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Plug some memory leaks. Suggested by Angela Wrobel